inclass1.txt
BRYONNA CHARLES
1/29/18


A..

E:\javaprojects\inclass1>javac Test.java
Test.java:1: error: class test is public, should be declared in a file named test.java
public class test
       ^
1 error

B..
There is no error because I changed a literal string 

C..
E:\javaprojects\inclass1>javac Test.java
Test.java:5: error: ')' expected
        System.out.println(An Emergency Broadcast");
                             ^
Test.java:5: error: unclosed string literal
        System.out.println(An Emergency Broadcast");
                                                 ^
2 errors

D..
E:\javaprojects\inclass1>javac Test.java
Test.java:5: error: ')' expected
        System.out.println(An Emergency Broadcast");
                             ^
Test.java:5: error: unclosed string literal
        System.out.println(An Emergency Broadcast");
                                                 ^
2 errors

E..
classes can compile without main but it will not run

F..
E:\javaprojects\inclass1>javac Test.java
Test.java:5: error: ')' expected
        System.out.println(An Emergency Broadcast");
                             ^
Test.java:5: error: unclosed string literal
        System.out.println(An Emergency Broadcast");
                                                 ^
2 errors

G..
E:\javaprojects\inclass1>javac Test.java
Test.java:5: error: ';' expected
        System.out.println("An Emergency Broadcast")
                                                    ^
1 error

H..
E:\javaprojects\inclass1>javac Test.java
Test.java:5: error: ';' expected
        System.out.println("An Emergency Broadcast")
                                                    ^
1 error
